--- a/src/Components/Sidebar/sidebar.scss
+++ b/src/Components/Sidebar/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar-open {
   height: 97%;
-  width: 35%;
+  width: 30rem;
   padding: 1rem 0.1rem 0.5rem;
   background-color: #ffffff;
   display: flex;
@@ -66,7 +66,7 @@
     }
     .new-list {
       padding: 0.25rem 0 0.25rem 2.2rem;
-      width: 95%;
+      // width: 25rem;
       display: flex;
       justify-content: flex-start;
       .icon {
@@ -76,7 +76,7 @@
         justify-content: center;
       }
       input {
-        width: 100%;
+        // width: 100%;
         border: 0;
         background-color: transparent;
         font-size: 1.2rem;
