--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ $wrapper-color: #faf9f8;
 .wrapper {
   width: 100vw;
   height: 100vh;
-  font-family: "Roboto";
+  // font-family: "Roboto";
   font-weight: 200;
   border-radius: 1rem;
   background-color: $wrapper-color;
