--- a/src/Components/Sidebar/sidebar.scss
+++ b/src/Components/Sidebar/sidebar.scss
@@ -29,10 +29,10 @@
     display: flex;
     flex-direction: column;
     padding: 0.5rem 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
-    height: 100%;
-    .sidebar-content {
+    height: 45rem;
+      .sidebar-content {
       .icon {
         display: flex;
         justify-content: center;
