--- a/src/Components/SidebarContent/sidebarContent.scss
+++ b/src/Components/SidebarContent/sidebarContent.scss
@@ -6,17 +6,21 @@
   font-size: 1.2rem;
 
   .icon {
-    width: 3rem;
+    flex-basis: 3rem;
     height: 100%;
     padding:.15rem .3rem;
   }
   .content-name {
-    width: 65%;
+    flex-grow: 1;
     padding: 1rem 0 1rem 1rem;
+    overflow: auto;
   }
   .icon,
   .content-name {
     display: flex;
     align-items: center;
+  }
+  .count{
+    flex-basis: 3rem;
   }
 }
