--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 :root {
   font-size: 16px;
-  // font-weight: 500;
-  // font-family: "Segoe", "Segoe UI", "Arial", "sans-serif";
+  font-weight: 500;
+  font-family: "Segoe", "Segoe UI", "Arial", "sans-serif";
   margin: 0;
   display: flex;
   align-items: center;
