--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -1,11 +1,9 @@
-$navbar-color: #2564cf;
-$hover-color: #215aba;
-$font-white: #f2f2f2;
+@use '../../theme';
 
 .navbar {
   width: 100%;
   height: 4rem;
-  background-color: $navbar-color;
+  background-color: theme.$navbar-background;
   border-radius: 0.5rem 0.5rem 0 0;
   display: flex;
 
@@ -21,7 +19,7 @@ $font-white: #f2f2f2;
       border-radius: 0.5rem 0 0;
     }
     button:hover {
-      background-color: $hover-color;
+      background-color: theme.$navbar-hover-color;
     }
   }
 
@@ -37,10 +35,10 @@ $font-white: #f2f2f2;
       justify-content: center;
       a {
         text-decoration: none;
-        color: $font-white;
+        color: theme.$font-white;
       }
       a:hover {
-        text-decoration: underline $font-white;
+        text-decoration: underline theme.$font-white;
       }
     }
     .search-bar-wrapper {
@@ -50,7 +48,7 @@ $font-white: #f2f2f2;
       display: flex;
       place-content: center;
       .search-bar {
-        background-color: $font-white;
+        background-color: theme.$font-white;
         width: 50%;
         display: flex;
         padding: 0.6rem;
@@ -77,7 +75,7 @@ $font-white: #f2f2f2;
       .whats-new {
         flex-grow: 1;
         button:hover {
-          background-color: $hover-color;
+          background-color: theme.$navbar-hover-color;
         }
       }
     }
@@ -90,6 +88,6 @@ $font-white: #f2f2f2;
   }
 
   .user-profile-icon:hover {
-    background-color: $hover-color;
+    background-color: theme.$navbar-hover-color;
   }
 }
