--- a/src/Components/Sidebar/sidebar.scss
+++ b/src/Components/Sidebar/sidebar.scss
@@ -1,13 +1,14 @@
+@use '../../theme';
 .sidebar-open {
   height: 97%;
   width: 30rem;
   padding: 1rem 0.1rem 0.5rem;
-  background-color: #ffffff;
+  background-color: theme.$background-white;
   display: flex;
   flex-direction: column;
   font-size: 1rem;
   font-weight: 200;
-  color: #4d4c4b;
+  color: theme.$font-color-dark;
 
   .sidebar-header {
     padding: 1.3rem 1.8rem;
@@ -19,11 +20,10 @@
     }
   }
   .splitter {
-    border-top: 0.15rem solid gray;
+    border-top: 0.15rem solid theme.$todo-editor-option-hover;
     border-radius: 3rem;
     height: 0.1rem;
-    width: 90%;
-    margin: 0.5rem 1rem;
+    margin: 1rem 3rem;
   }
   .sidebar-body {
     display: flex;
@@ -40,15 +40,15 @@
       }
     }
     .contents:hover {
-      background-color: #faf9f8;
+      background-color: theme.$background-hover;
 
     }
     .active {
-      border-left: 0.2rem solid #2564cf;
-      background-color: #eff6fc;
+      border-left: 0.2rem solid theme.$navbar-background;
+      background-color: theme.$active-button;
     }
     .active:hover {
-      background-color: #eff6fc;
+      background-color: theme.$active-button;
     }
   }
 
@@ -62,11 +62,10 @@
     }
     .new-group:hover,
     .new-list:hover {
-      background-color: #faf9f8;
+      background-color: theme.$background-hover;
     }
     .new-list {
       padding: 0.25rem 0 0.25rem 2.2rem;
-      // width: 25rem;
       display: flex;
       justify-content: flex-start;
       .icon {
@@ -76,7 +75,6 @@
         justify-content: center;
       }
       input {
-        // width: 100%;
         border: 0;
         background-color: transparent;
         font-size: 1.2rem;
@@ -84,7 +82,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: #2564cf;
+        color: theme.$navbar-background;
       }
       input:focus {
         outline: 0;
@@ -109,7 +107,7 @@
       align-items: center;
     }
     .icon:hover {
-      background-color: #faf9f8;
+      background-color: theme.$background-hover;
     }
   }
 }
