--- a/src/Components/Todo/todo.scss
+++ b/src/Components/Todo/todo.scss
@@ -1,3 +1,5 @@
+@use "../../theme";
+
 .todo {
   display: flex;
   flex-direction: column;
@@ -30,7 +32,7 @@
           padding: 0.7rem;
         }
         .more-options:hover {
-          background-color: #ffffff;
+          background-color: theme.$background-white;
         }
       }
       .view-options {
@@ -42,10 +44,10 @@
         }
         .list:hover,
         .grid:hover {
-          background-color: #ffffff;
+          background-color: theme.$background-white;
         }
         .active {
-          border-bottom: 0.2rem solid #2564cf;
+          border-bottom: 0.2rem solid theme.$navbar-background;
         }
       }
     }
@@ -60,10 +62,10 @@
     flex-direction: column;
     margin: 0.8rem 2rem 0;
     padding: 1rem;
-    border-bottom: 0.5px solid #c0bfbf;
+    border-bottom: 0.5px solid theme.$todo-input-border;
     border-radius: 0.5rem 0.5rem 0 0;
     box-shadow: -1px -1px 5px -1px rgba(0, 0, 0, 0.5);
-    background-color: #ffffff;
+    background-color: theme.$background-white;
     .input-field {
       display: flex;
       width: 100%;
@@ -75,7 +77,7 @@
         input {
           font-size: 1.3rem;
           font-weight: 100;
-          color: #adacac;
+          color: theme.$font-color;
           height: 100%;
           width: 100%;
           border: 0;
@@ -94,13 +96,13 @@
     padding: 1rem;
     border-radius: 0 0 0.5rem 0.5rem;
     box-shadow: 1px 2px 5px -1px rgba(0, 0, 0, 0.5);
-    background-color: #faf9f8;
+    background-color: theme.$background-hover;
     .todo-options {
       display: flex;
       padding: 0.5rem;
     }
     .todo-options:hover {
-      background-color: #ffffff;
+      background-color: theme.$background-white;
     }
     .add-todo-button {
       background-color: transparent;
@@ -111,12 +113,12 @@
         width: 4rem;
         height: 100%;
         font-size: 1.2rem;
-        color: #2564cf;
+        color: theme.$navbar-background;
         background-color: transparent;
         border: 0;
       }
-      button:hover{
-        background-color: #ffffff;
+      button:hover {
+        background-color: theme.$background-white;
       }
     }
   }
@@ -126,17 +128,18 @@
     align-items: flex-start;
     justify-content: center;
     margin: 0.8rem 2rem;
-    background-color: #ffffff;
+    background-color: theme.$background-white;
     border-radius: 0.5rem 0.5rem 0 0;
     .completed {
       width: 100%;
-      background-color: #faf9f8;
+      background-color: theme.$background-hover;
       display: flex;
       font-size: 1.5rem;
       font-weight: 800;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
+
       .completed-actions {
         display: flex;
         p {
@@ -144,7 +147,7 @@
         }
         .counter {
           font-weight: 600;
-          color: #363636;
+          color: theme.$font-color;
         }
       }
     }
@@ -156,7 +159,7 @@
       overflow: auto;
       justify-content: flex-start;
       align-items: center;
-      background-color: #ffffff;
+      background-color: theme.$background-white;
       .radiobtn {
         height: 3rem;
         width: 3rem;
@@ -187,20 +190,20 @@
         align-items: center;
       }
     }
-    .todo-list,
-    .todo-list-completed {
+    .todo-list-grid,
+    .todo-list-completed-grid {
       width: 100%;
       font-size: 1.2rem;
       display: flex;
       font-weight: 100;
       justify-content: flex-start;
       align-items: center;
-      background-color: #ffffff;
+      background-color: theme.$background-white;
       .radiobtn:hover,
       .task:hover,
       .due-time:hover,
       .important:hover {
-        border: 0.1rem solid #676767;
+        border: 0.1rem solid theme.$todo-input-border;
       }
       .radiobtn {
         height: 3rem;
@@ -227,6 +230,49 @@
       .important {
         height: 3rem;
         width: 10%;
+        display: flex;
+        padding: 0.2rem 0.5rem;
+        align-items: center;
+      }
+    }
+    .todo-list-completed-grid {
+      .task {
+        text-decoration: line-through;
+      }
+    }
+    .todo-list:hover {
+      background-color: theme.$background-hover;
+    }
+    .todo-list {
+      width: 100%;
+      font-size: 1.2rem;
+      display: flex;
+      height: 4.5rem;
+      font-weight: 100;
+      align-items: center;
+      background-color: theme.$background-white;
+      box-shadow:
+        rgba(0, 0, 0, 0.133) 0px 3.2px 7.2px 0px,
+        rgba(0, 0, 0, 0.11) 0px 0.6px 1.8px 0px;
+
+      .radiobtn {
+        height: 3rem;
+        width: 3rem;
+        margin-left: 1rem;
+        display: flex;
+        padding: 0.2rem 0.5rem;
+        align-items: center;
+      }
+      .task {
+        display: flex;
+        padding: 0.2rem 0.5rem;
+        align-items: center;
+        height: 3rem;
+        flex-grow: 1;
+      }
+      .important {
+        height: 3rem;
+        width: 4rem;
         display: flex;
         padding: 0.2rem 0.5rem;
         align-items: center;
@@ -244,10 +290,10 @@
   height: 97%;
   width: 35%;
   padding: 1rem 0.1rem 0.5rem;
-  background-color: #faf9f8;
+  background-color: theme.$background-hover;
   display: flex;
   flex-direction: column;
   font-size: 1rem;
   font-weight: 200;
-  color: #4d4c4b;
+  color: theme.$font-color-dark;
 }
